Fixed issue with css where text did not wrap

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ a:hover {color: #000;}
 .nav h1 a{text-decoration: none;}
 
 .message {
-	border: 1px solid #AAA; border-top: 0px; border-bottom: 2px solid #777; background-color: #FFF;
+	border: 1px solid #AAA; border-top: 0px; border-bottom: 2px solid #777; background-color: #FFF; word-wrap: break-word;
 }
 
 .message-small {
